5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1800_2571.log
== TEST (2019-06-11 11:37:53) 
-- CODE:
v = input("Insira: ")
saida = " "
for i in range(len(v)):
	if string[i].upper() != "A":
		saida = saida + string[i]
	print(saida)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if string[i].upper() != "A":
NameError: name 'string' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:38:10) 
-- CODE:
v = input("Insira: ")
saida = " "
for i in range(len(v)):
	if v[i].upper() != "A":
		saida = saida + v[i]
	print(saida)
		
-- OUTPUT:
I
 In
 Ins
 Inst
 Insti
 Instit
 Institu
 Institut
 Instituto
 Instituto_
 Instituto_d
 Instituto_de
 Instituto_de_
 Instituto_de_C
 Instituto_de_Co
 Instituto_de_Com
 Instituto_de_Comp
 Instituto_de_Compu
 Instituto_de_Comput
 Instituto_de_Comput
 Instituto_de_Computc
 Instituto_de_Computc
 Instituto_de_Computco
 Instituto_de_Computco-
 Instituto_de_Computco-I
 Instituto_de_Computco-IC
 Instituto_de_Computco-ICO
 Instituto_de_Computco-ICOM
 Instituto_de_Computco-ICOMP
 Instituto_de_Computco-ICOMP-
 Instituto_de_Computco-ICOMP-U
 Instituto_de_Computco-ICOMP-UF
 Instituto_de_Computco-ICOMP-UF
 Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:38:18) 
-- CODE:
v = input("Insira: ")
saida = " "
for i in range(len(v)):
	if v[i].upper() != "A":
		saida = saida + v[i]
print(saida)
		
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:38:24) 
-- CODE:
v = input("Insira: ")
saida = " "
for i in range(len(v)):
	if v[i].upper() != "A":
		saida = saida + v[i]
print(saida)
		
-- EXECUTION TIME:
0.668515
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
